# D3

./: .gitignore  D3.sln  README.md
D3/: Codec.cpp  Codec.h  Column.cpp  Column.h  D3.cpp  D3.h  D3BitMask.h  D3ColumnPermission.cpp  D3ColumnPermission.h  D3ColumnPermissionBase.cpp  D3ColumnPermissionBase.h  D3CustomTypes.h  D3DatabasePermission.cpp  D3DatabasePermission.h  D3DatabasePermissionBase.cpp  D3DatabasePermissionBase.h  D3Date.cpp  D3Date.h  D3EntityPermission.cpp  D3EntityPermission.h  D3EntityPermissionBase.cpp  D3EntityPermissionBase.h  D3Funcs.cpp  D3Funcs.h  D3HSDB.h  D3HistoricPassword.cpp  D3HistoricPassword.h  D3HistoricPasswordBase.cpp  D3HistoricPasswordBase.h  D3MDDB.h  D3MetaColumn.cpp  D3MetaColumn.h  D3MetaColumnBase.cpp  D3MetaColumnBase.h  D3MetaColumnChoice.cpp  D3MetaColumnChoice.h  D3MetaColumnChoiceBase.cpp  D3MetaColumnChoiceBase.h  D3MetaDatabase.cpp  D3MetaDatabase.h  (+110 more)
Test/: Menu.cpp  Menu.h  MenuMDLoaded.cpp  MenuMDLoaded.h  MenuMain.cpp  MenuMain.h  MenuPlay.cpp  MenuPlay.h  SCHOOLMD.xml  Test.cpp  Test.vcxproj  dbdefs.h  types.cpp  types.h
hello/: hello.cpp  hello.vcxproj  types.h
